--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<form action="http://localhost:8080/run" method="get">
@@ -26,11 +27,9 @@
 
 	<br>
 	<br>
-	<div>
-		<textarea id="input" rows="18" cols="30"></textarea>
-		<textarea id="output" rows="18" cols="120" readonly></textarea>
-	</div>
-
+	<div id="input" contenteditable=true spellcheck=false></div>
+	<br>
+	<div id="output"></div>
 	<br>
 	<input name="buttonExecute" onclick="execute(document.getElementById('input').value)" type="button" value="Analiza tekstu" />
 	<br>
@@ -38,6 +37,8 @@
 	<input name="buttonExecute" onclick="nextWord(document.getElementById('input').value)" type="button" value="Kolejny wyraz" />
 	<br>
 	<br>
-	<script src="main.js"></script>
+	<script src="js/scripts/main.js"></script>
+	<script src="js/scripts/wordChecker.js"></script>
+	<script src="js/scripts/rest.js"></script>
 </body>
 </html>
