Connect angular with backend.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,7 +23,7 @@
 <script src="./js/app.js" type="text/javascript"></script>
 <script src="./js/scripts/main.js" type="text/javascript"></script>
 <script src="js/scripts/word-checker.js" type="text/javascript"></script>
-<script src="./js/scripts/rest.js" type="text/javascript"></script>
+<script src="js/scripts/services/rest.js" type="text/javascript"></script>
 
 <script src="./js/scripts/controllers/main-panel-controller.js" type="text/javascript"></script>
 
