--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,7 @@
 	<title>Artificial assocaitive system</title>
 
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<link rel="stylesheet" type="text/css" href="./js/lib/angular-material/angular-material.css">
 </head>
 <body ng-app="aas">
 
@@ -17,13 +18,16 @@
 <!-- 3rd Party Libraries -->
 <script src="./js/lib/jquery/dist/jquery.js" type="text/javascript"></script>
 <script src="./js/lib/angular/angular.js" type="text/javascript"></script>
+<script src="./js/lib/angular-animate/angular-animate.js" type="text/javascript"></script>
+<script src="./js/lib/angular-aria/angular-aria.js" type="text/javascript"></script>
+<script src="./js/lib/angular-material/angular-material.js" type="text/javascript"></script>
+<script src="./js/lib/angular-messages/angular-messages.js" type="text/javascript"></script>
 <script src="./js/lib/angular-resource/angular-resource.js" type="text/javascript"></script>
 <script src="./js/lib/angular-route/angular-route.js" type="text/javascript"></script>
 
 <script src="./js/app.js" type="text/javascript"></script>
-<script src="./js/scripts/main.js" type="text/javascript"></script>
-<script src="js/scripts/word-checker.js" type="text/javascript"></script>
-<script src="js/scripts/services/rest.js" type="text/javascript"></script>
+<script src="./js/scripts/word-checker.js" type="text/javascript"></script>
+<script src="./js/scripts/services/rest.js" type="text/javascript"></script>
 
 <script src="./js/scripts/controllers/main-panel-controller.js" type="text/javascript"></script>
 
