--- a/src/main/webapp/html/main-panel.html
+++ b/src/main/webapp/html/main-panel.html
@@ -25,7 +25,7 @@
 	<br>
 	<div id="inputText" contenteditable=true spellcheck=false></div>
 	<br>
-	<div id="outputText" contenteditable=true spellcheck=false ng-model="outputText">
+	<div id="outputText" spellcheck=false ng-model="outputText">
 		<pre>{{outputText}}</pre>
 	</div>
 </div>
