--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="Pragma" content="no-cache"/>
 	<meta http-equiv="Expires" content="0"/>
 
-	<title>Artificial assocaitive system</title>
+	<title>Artificial associative system</title>
 
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<link rel="stylesheet" type="text/css" href="./js/lib/angular-material/angular-material.css">
@@ -26,9 +26,7 @@
 <script src="./js/lib/angular-route/angular-route.js" type="text/javascript"></script>
 
 <script src="./js/app.js" type="text/javascript"></script>
-<script src="./js/scripts/word-checker.js" type="text/javascript"></script>
 <script src="./js/scripts/services/rest.js" type="text/javascript"></script>
-
 <script src="./js/scripts/controllers/main-panel-controller.js" type="text/javascript"></script>
 
 </body>
