Sort output by coeff

--- a/src/main/webapp/html/main-panel.html
+++ b/src/main/webapp/html/main-panel.html
@@ -30,7 +30,7 @@
 	<!--</form>-->
 	<section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
 		<md-button class="md-raised md-primary" ng-disabled="!isGraphLoadedSuccessfully" ng-click="textAnalysis()">Analiza tekstu</md-button>
-		<md-button class="md-raised md-primary" ng-disabled="!isGraphLoadedSuccessfully" ng-click="nextWord()">Dokończ słowo</md-button>
+		<md-button class="md-raised md-primary" ng-disabled="!isGraphLoadedSuccessfully" ng-click="finishWord()">Dokończ słowo/Kolejne słowo</md-button>
 		<md-button class="md-raised md-primary" ng-disabled="!isGraphLoadedSuccessfully" ng-click="checkInputWords()">Sprawdź słowa</md-button>
 	</section>
 	<br>
