--- a/src/main/webapp/html/main-panel.html
+++ b/src/main/webapp/html/main-panel.html
@@ -1,10 +1,13 @@
 <div ng-controller="mainPanelController">
 	<br>
+
 	<div>
 	<form action="http://localhost:8080/run" method="get">
 		Book: <input type="text" name="text">
 		<input type="submit" value="Run"/>
 		<!--<input type="text"  name="textType" value="book" disabled="true">-->
+		<input type="file" style="display:none;" id="inputfile"/>
+		<!--<a href="javascript:document.getElementById('inputfile').click(); ">try this</a>-->
 	</form>
 	<br>
 	<form action="http://localhost:8080/run" method="get">
@@ -36,7 +39,9 @@
 	<br>
 	<div id="inputText" contenteditable=true spellcheck=false></div>
 	<br>
-	<div id="outputText" spellcheck=false ng-model="outputText">
-		<pre>{{outputText}}</pre>
-	</div>
+	<!--<div id="outputText" spellcheck=false ng-model="outputText">-->
+		<!--<pre>{{outputText}}</pre>-->
+	<!--</div>-->
+	<!--<script src="./js/scripts/graph/graph.js"></script>-->
+	<ng-include src="'html/graph-view.html'"/>
 </div>
