--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,8 @@
 
 <div ng-view></div>
 
+<script src="//d3js.org/d3.v3.min.js"></script>
+
 <!-- 3rd Party Libraries -->
 <script src="./js/lib/jquery/dist/jquery.js" type="text/javascript"></script>
 <script src="./js/lib/angular/angular.js" type="text/javascript"></script>
@@ -27,6 +29,7 @@
 
 <script src="./js/app.js" type="text/javascript"></script>
 <script src="./js/scripts/services/rest.js" type="text/javascript"></script>
+<script src="./js/scripts/controllers/graph-controller.js" type="text/javascript"></script>
 <script src="./js/scripts/controllers/main-panel-controller.js" type="text/javascript"></script>
 
 </body>
