--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,10 +10,15 @@
 
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<link rel="stylesheet" type="text/css" href="./js/lib/angular-material/angular-material.css">
+	<link data-require="bootstrap-css@3.1.1" data-semver="3.1.1" rel="stylesheet"
+		  href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
+	<link data-require="fontawesome@*" data-semver="4.1.0" rel="stylesheet"
+		  href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"/>
 </head>
 <body ng-app="aas">
 
 <div ng-view></div>
+
 
 <script src="//d3js.org/d3.v3.min.js"></script>
 
@@ -26,6 +31,7 @@
 <script src="./js/lib/angular-messages/angular-messages.js" type="text/javascript"></script>
 <script src="./js/lib/angular-resource/angular-resource.js" type="text/javascript"></script>
 <script src="./js/lib/angular-route/angular-route.js" type="text/javascript"></script>
+<script src="//angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
 
 <script src="./js/app.js" type="text/javascript"></script>
 <script src="./js/scripts/services/rest.js" type="text/javascript"></script>
