--- a/src/main/webapp/html/main-panel.html
+++ b/src/main/webapp/html/main-panel.html
@@ -15,11 +15,11 @@
 						   class="icon-background">Add file<span class="pull-right"><i
 							class="fa fa-list icon-background"></i></span></a>
 					</li>
-					<li><a href="" ng-click="textAnalysis()"
+					<li><a href="" ng-click="createGraph()"
 						   class="icon-background">Create graph<span class="pull-right"><i
 							class="fa fa-list icon-background"></i></span></a>
 					</li>
-					<li><a href="" ng-click="textAnalysis()"
+					<li><a href="" ng-click="extendGraph()"
 						   class="icon-background">Extend graph<span class="pull-right"><i
 							class="fa fa-list icon-background"></i></span></a>
 					</li>
@@ -39,40 +39,46 @@
 						   class="icon-background">Next word<span class="pull-right"><i
 							class="fa fa-code"></i></span></a>
 					</li>
-					<li><a href="" ng-click="clearInput()"
-						   class="icon-background">Clean input<span class="pull-right"><i
+					<li ng-controller="graphController">
+						<a href="" ng-click="drawGraph()"
+						   class="icon-background">Draw graph<span class="pull-right"><i
+								class="fa fa-code"></i></span></a>
+					</li>
+					<li><a href="" ng-click="outputText = ''"
+						   class="icon-background">Clean output<span class="pull-right"><i
 							class="fa fa-code"></i></span></a>
 					</li>
 					<li><a href="" ng-click="outputText = ''"
 						   class="icon-background">Clean output<span class="pull-right"><i
 							class="fa fa-code"></i></span></a>
 					</li>
+
 				</ul>
 			</div>
 			<div id="sidebar-page-content">
 				<input type="file" style="display:none;" id="inputFile"/>
-				<div>
-					<form action="http://localhost:8080/run" method="get">
-						Book: <input type="text" name="text">
-						<input type="submit" value="Run"/>
-						<!--<input type="text"  name="textType" value="book" disabled="true">-->
+				<!--<input type="file" style="display:none;" id="inputFile"/>-->
+				<!--<div>-->
+				<!--<form action="http://localhost:8080/run" method="get">-->
+				<!--Book: <input type="text" name="text">-->
+				<!--<input type="submit" value="Run"/>-->
+				<!--&lt;!&ndash;<input type="text"  name="textType" value="book" disabled="true">&ndash;&gt;-->
 
-					</form>
-					<!--<a href="javascript:document.getElementById('inputfile').click(); ">try this</a>-->
-					<br>
-					<form action="http://localhost:8080/run" method="get">
-						Text: <input type="text" name="text">
-						<input type="submit" value="Run"/>
-						<!--<input type="text" value="text" disabled="true">-->
-					</form>
-					<br>
-				</div>
-				<br>
-				<form action="http://localhost:8080/extend" method="get">
-					Book: <input type="text" name="extendBook"><br>
-					<input type="submit" value="Extend"/>
-				</form>
-				<br>
+				<!--</form>-->
+				<!--&lt;!&ndash;<a href="javascript:document.getElementById('inputfile').click(); ">try this</a>&ndash;&gt;-->
+				<!--<br>-->
+				<!--<form action="http://localhost:8080/run" method="get">-->
+				<!--Text: <input type="text" name="text">-->
+				<!--<input type="submit" value="Run"/>-->
+				<!--&lt;!&ndash;<input type="text" value="text" disabled="true">&ndash;&gt;-->
+				<!--</form>-->
+				<!--<br>-->
+				<!--</div>-->
+				<!--<br>-->
+				<!--<form action="http://localhost:8080/extend" method="get">-->
+				<!--Book: <input type="text" name="extendBook"><br>-->
+				<!--<input type="submit" value="Extend"/>-->
+				<!--</form>-->
 				<div id="inputText" contenteditable=true spellcheck=false></div>
 				<br>
 				<!--<div id="outputText" spellcheck=false ng-model="outputText">-->
@@ -80,8 +86,10 @@
 				<!--</div>-->
 				<!--<script src="./js/scripts/graph/graph.js"></script>-->
 				<!--<ng-include src="'html/graph-view.html'"/>-->
-				<ng-include src="'html/graph-view.html'"/>
+				<!--<ng-include src="'html/graph-view.html'"/>-->
+
 			</div>
+
 		</div>
 	</div>
 </div>
