Update bower. Add spinner

--- a/src/main/webapp/html/main-panel.html
+++ b/src/main/webapp/html/main-panel.html
@@ -44,50 +44,24 @@
 						   class="icon-background">Draw graph<span class="pull-right"><i
 								class="fa fa-code"></i></span></a>
 					</li>
-					<li><a href="" ng-click="outputText = ''"
-						   class="icon-background">Clean output<span class="pull-right"><i
+					<li><a href="" ng-click="cleanInput()"
+						   class="icon-background">Clean input<span class="pull-right"><i
 							class="fa fa-code"></i></span></a>
 					</li>
 					<li><a href="" ng-click="outputText = ''"
 						   class="icon-background">Clean output<span class="pull-right"><i
 							class="fa fa-code"></i></span></a>
 					</li>
-
 				</ul>
 			</div>
 			<div id="sidebar-page-content">
 				<input type="file" style="display:none;" id="inputFile"/>
-				<!--<input type="file" style="display:none;" id="inputFile"/>-->
-				<!--<div>-->
-				<!--<form action="http://localhost:8080/run" method="get">-->
-				<!--Book: <input type="text" name="text">-->
-				<!--<input type="submit" value="Run"/>-->
-				<!--&lt;!&ndash;<input type="text"  name="textType" value="book" disabled="true">&ndash;&gt;-->
 
-				<!--</form>-->
-				<!--&lt;!&ndash;<a href="javascript:document.getElementById('inputfile').click(); ">try this</a>&ndash;&gt;-->
-				<!--<br>-->
-				<!--<form action="http://localhost:8080/run" method="get">-->
-				<!--Text: <input type="text" name="text">-->
-				<!--<input type="submit" value="Run"/>-->
-				<!--&lt;!&ndash;<input type="text" value="text" disabled="true">&ndash;&gt;-->
-				<!--</form>-->
-				<!--<br>-->
-				<!--</div>-->
-				<!--<br>-->
-				<!--<form action="http://localhost:8080/extend" method="get">-->
-				<!--Book: <input type="text" name="extendBook"><br>-->
-				<!--<input type="submit" value="Extend"/>-->
-				<!--</form>-->
 				<div id="inputText" contenteditable=true spellcheck=false></div>
 				<br>
 				<!--<div id="outputText" spellcheck=false ng-model="outputText">-->
 				<!--<pre>{{outputText}}</pre>-->
 				<!--</div>-->
-				<!--<script src="./js/scripts/graph/graph.js"></script>-->
-				<!--<ng-include src="'html/graph-view.html'"/>-->
-				<!--<ng-include src="'html/graph-view.html'"/>-->
-
 			</div>
 
 		</div>
