--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,10 +19,9 @@
 </head>
 <body ng-app="aas">
 
+<span us-spinner="{radius: 20, width: 4, length: 16, position: 'absolute', shadow: false}" spinner-key="spinner-1"></span>
+
 <div ng-view></div>
-
-
-<script src="//d3js.org/d3.v3.min.js"></script>
 
 <!-- 3rd Party Libraries -->
 <script src="./js/lib/jquery/dist/jquery.js" type="text/javascript"></script>
@@ -33,7 +32,10 @@
 <script src="./js/lib/angular-messages/angular-messages.js" type="text/javascript"></script>
 <script src="./js/lib/angular-resource/angular-resource.js" type="text/javascript"></script>
 <script src="./js/lib/angular-route/angular-route.js" type="text/javascript"></script>
-<script src="//angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
+<script src="./js/lib/angular-ui-router/release/angular-ui-router.js"></script>
+<script src="./js/lib/spin-js/spin.js" type="text/javascript"></script>
+<script src="./js/lib/angular-spinner/dist/angular-spinner.js" type="text/javascript"></script>
+<script src="./js/lib/d3/d3.js" type="text/javascript"></script>
 
 <script src="./js/app.js" type="text/javascript"></script>
 <script src="./js/scripts/services/rest.js" type="text/javascript"></script>
