Add Font Awesome

--- a/src/main/webapp/html/main-panel.html
+++ b/src/main/webapp/html/main-panel.html
@@ -13,44 +13,44 @@
 				<ul class="nav nav-pills nav-stacked">
 					<li><a href="javascript:document.getElementById('inputFile').click()"
 						   class="icon-background">Add file<span class="pull-right"><i
-							class="fa fa-list icon-background"></i></span></a>
+							class="fa fa-file icon-background"></i></span></a>
 					</li>
 					<li><a href="" ng-click="createGraph()"
 						   class="icon-background">Create graph<span class="pull-right"><i
-							class="fa fa-list icon-background"></i></span></a>
+							class="fa fa-plus icon-background"></i></span></a>
 					</li>
 					<li><a href="" ng-click="extendGraph()"
 						   class="icon-background">Extend graph<span class="pull-right"><i
-							class="fa fa-list icon-background"></i></span></a>
+							class="fa fa-expand icon-background"></i></span></a>
 					</li>
 					<li><a href="" ng-click="breakExtending()"
 						   class="icon-background">Break extending<span class="pull-right"><i
-							class="fa fa-code"></i></span></a>
+							class="fa fa-stop icon-background"></i></span></a>
 					</li>
 					<li><a href="" ng-click="textAnalysis()"
 						   class="icon-background">Text analysis<span class="pull-right"><i
-							class="fa fa-list icon-background"></i></span></a>
+							class="fa fa-superpowers icon-background"></i></span></a>
 					</li>
 					<li><a href="" ng-click="checkInputWords()"
 						   class="icon-background">Check words<span class="pull-right"><i
-							class="fa fa-code icon-background"></i></span></a>
+							class="fa fa-check icon-background"></i></span></a>
 					</li>
 					<li><a href="" ng-click="finishWord()"
 						   class="icon-background">Next word<span class="pull-right"><i
-							class="fa fa-code"></i></span></a>
+							class="fa fa-arrow-right icon-background"></i></span></a>
 					</li>
 					<li ng-controller="graphController">
 						<a href="" ng-click="drawGraph()"
 						   class="icon-background">Draw graph<span class="pull-right"><i
-								class="fa fa-code"></i></span></a>
+								class="fa fa-code-fork icon-background"></i></span></a>
 					</li>
 					<li><a href="" ng-click="cleanInput()"
 						   class="icon-background">Clean input<span class="pull-right"><i
-							class="fa fa-code"></i></span></a>
+							class="fa fa-eraser icon-background"></i></span></a>
 					</li>
 					<li><a href="" ng-click="outputText = ''"
 						   class="icon-background">Clean output<span class="pull-right"><i
-							class="fa fa-code"></i></span></a>
+							class="fa fa-eraser icon-background fa-rotate-180"></i></span></a>
 					</li>
 				</ul>
 			</div>
