Add scrollbar to d3 graph

--- a/src/main/webapp/html/main-panel.html
+++ b/src/main/webapp/html/main-panel.html
@@ -64,6 +64,10 @@
 				<div id="outputText" spellcheck=false ng-model="outputText">
 					<p>{{outputText}}</p>
 				</div>
+
+				<div id="d3-graph">
+
+				</div>
 			</div>
 
 		</div>
