--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,6 +16,7 @@
 		  href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
 	<link data-require="fontawesome@*" data-semver="4.7.0" rel="stylesheet"
 		  href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+	<link rel="stylesheet" type="text/css" href="./js/lib/ng-scrollbar/dist/ng-scrollbar.css" >
 </head>
 <body ng-app="aas">
 
@@ -36,6 +37,7 @@
 <script src="./js/lib/spin-js/spin.js" type="text/javascript"></script>
 <script src="./js/lib/angular-spinner/dist/angular-spinner.js" type="text/javascript"></script>
 <script src="./js/lib/d3/d3.js" type="text/javascript"></script>
+<script src="./js/lib/ng-scrollbar/dist/ng-scrollbar.js" type="text/javascript"></script>
 
 <script src="./js/app.js" type="text/javascript"></script>
 <script src="./js/scripts/services/rest.js" type="text/javascript"></script>
