--- a/src/main/webapp/html/main-panel.html
+++ b/src/main/webapp/html/main-panel.html
@@ -61,8 +61,12 @@
 
 				<br>
 
-				<div id="outputText" spellcheck=false ng-model="outputText">
+				<div id="outputText2" spellcheck=false ng-model="outputText">
 					<p>{{outputText}}</p>
+				</div>
+
+				<div id="outputText">
+
 				</div>
 
 				<div id="d3-graph">
